force-app/main/default/objects/ssot__VoiceCallEngagement__dlm/fields/ssot__rel_1719818354499_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818354499_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VoiceCallEngagement_VoiceCallId_map__rel</label>
    <referenceTo>ssot__VoiceCall__dlm</referenceTo>
    <relationshipLabel>VoiceCallEngagement_VoiceCallId_map__rel</relationshipLabel>
    <relationshipName>rel_1719818354499_end</relationshipName>
    <type>Lookup</type>
</CustomField>