force-app/main/default/objects/ssot__VoiceCallEngagement__dlm/fields/ssot__rel_1720024290593_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720024290593_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VoiceCallEngagement_EngagementAction_rel</label>
    <referenceTo>ssot__EngagementAction__dlm</referenceTo>
    <relationshipLabel>VoiceCallEngagement_EngagementAction_rel</relationshipLabel>
    <relationshipName>rel_1720024290593_end</relationshipName>
    <type>Lookup</type>
</CustomField>