force-app/main/default/objects/ssot__VoiceCallEngagement__dlm/fields/ssot__VoiceCallFromName__c.field-meta.xml
<CustomField>
    <fullName>ssot__VoiceCallFromName__c</fullName>
    <label>Voice Call From Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VoiceCallFromName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>