force-app/main/default/objects/ssot__VoiceCallEngagement__dlm/fields/ssot__VoiceCallFromPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__VoiceCallFromPhoneNumber__c</fullName>
    <label>Voice Call From Phone Number</label>
    <length>40</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VoiceCallFromPhoneNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>