force-app/main/default/objects/ssot__VoiceCallEngagement__dlm/fields/ssot__VoiceCallId__c.field-meta.xml
<CustomField>
    <fullName>ssot__VoiceCallId__c</fullName>
    <label>Voice Call Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VoiceCallId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>